tests/NormalTests/paczka2/big_fuzzy/20948253.err
Error in line 1: EhRjFOM8 S125 28,2
Error in line 3: EhRjFOM8 A642 76,8
Error in line 11: A739 A642 73,3
Error in line 20: A739 S125 /3,9
Error in line 19: YK5F S128 43,1
Error in line 13: SLk A642 207,2
Error in line 37: SLk A739 6,7
Error in line 36: uqoJI0 S128 61,5
Error in line 50: EhRjFOM8 S125 3,6
Error in line 60: SLk S128 13,0
Error in line 68: Ty5jUB3oBN A642 -1,6
Error in line 61: SLk S125 80,2
Error in line 73: SLk S128 25,0
Error in line 64: 2Dr6S0 S125 35,0
Error in line 76: 2Dr6S0 A739 28,8
Error in line 71: uqoJI0 A642 269,7
Error in line 96: EhRjFOM8 S125 84,0
Error in line 98: SLk A642 80,8
Error in line 102: SLk S128 15,2
Error in line 93: YK5F S128 79,4
Error in line 108: uqoJI0 S125 73,1
Error in line 112: Ty5jUB3oBN A642 216,2
Error in line 132: A739 A642 28,7
Error in line 136: A739 S125 22,4
Error in line 126: YK5F S125 21,1
Error in line 173: Ty5jUB3oBN S125 29,8
Error in line 180: Ty5jUB3oBN S128 13,0
Error in line 179: uqoJI0 S125 9,6
Error in line 183: A739 A739 37,0
Error in line 182: Ty5jUB3oBN S125 58,3
Error in line 196: uqoJI0 A739 27,8
Error in line 205: 2Dr6S0 A739 -1,3
Error in line 199: A739 A642 88,6
Error in line 202: 2Dr6S0 A739 14,5
Error in line 214: 2Dr6S0 S125 38,7
Error in line 217: 2Dr6S0 A642 2?0,4
Error in line 215: EhRjFOM8 A642 177,8
Error in line 216: 2Dr6S0 A642 81,5
Error in line 209: Ty5jUB3oBN A642 72,6
Error in line 231: YK5F S125 292,7
Error in line 238: YK5F S128 86,5
